[metadata]
name = subnetinfo
version = 1.1
author = Kacper Styslo
author_email = kacper.styslo@gmail.com
description = Get information about chosen subnet
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/kacperstyslo/subnet_info
classifiers =
    Intended Audience :: Developers
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Development Status :: 5 - Production/Stable
    Operating System :: POSIX :: Linux
    Operating System :: Microsoft :: Windows :: Windows 10

[options]
packages = find:
python_requires = >=3.6
include_package_data = True